--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
         </nav>
       </header>
       <main class="main">
-        <div class="first-box box-bg_blue">
+        <div class="first-box box-bg_blue d-flex align-items-center">
           <div class="container">
             <div class="row">
               <div class="col-md"></div>
@@ -234,9 +234,9 @@
                   <div class="tab-pane fade show active" id="teasers" role="tabpanel" aria-labelledby="teasers-tab">
                     <div class="container-fluid">
                       <div class="row">
-                        <div class="col-12 col-md-8 col-lg-6"><img class="teasers-pisition img_max-width" src="/img/mac.png" alt=""></div>
+                        <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="teasers-pisition img_max-width d-flex align-items-center justify-content-center" src="/img/mac.png" alt=""></div>
                         <div class="col-12 col-md-4 col-lg-6">
-                          <h3 class="tabs__title">One of the most interest-provoking advertising method.</h3><span class="tabs__span">An appealing picture with an attractive headline create a true highlight of the page, which is difficult to ignore. Wide customization options help to configure and maintain this popular ad format in accordance with advertiser needs and user expectations.</span><br><a class="tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
+                          <h3 class="tabs__title tabs-content_center-media768">One of the most interest-provoking advertising method.</h3><span class="tabs__span tabs-content_center-media768">An appealing picture with an attractive headline create a true highlight of the page, which is difficult to ignore. Wide customization options help to configure and maintain this popular ad format in accordance with advertiser needs and user expectations.</span><br><a class="tabs-content_center-media768 tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
                         </div>
                       </div>
                     </div>
@@ -245,7 +245,7 @@
                     <div class="row">
                       <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="/img/context.png" alt=""></div>
                       <div class="col-12 col-md-4 col-lg-6">
-                        <h3 class="tabs__title">Textual ads - easy and fruitful format for commercial goals</h3><span class="tabs__span">Texts are suitable advertising tool for any-purpose promotion campaign. Thanks to adaptive design and wide customization options, this kind of ads naturally fits into main content of the page and softly induce visitors to follow them.</span><br><a class="tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
+                        <h3 class="tabs__title tabs-content_center-media768">Textual ads - easy and fruitful format for commercial goals</h3><span class="tabs__span tabs-content_center-media768">Texts are suitable advertising tool for any-purpose promotion campaign. Thanks to adaptive design and wide customization options, this kind of ads naturally fits into main content of the page and softly induce visitors to follow them.</span><br><a class="tabs-content_center-media768 tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
                       </div>
                     </div>
                   </div>
@@ -253,7 +253,7 @@
                     <div class="row">
                       <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="/img/banners.png" alt=""></div>
                       <div class="col-12 col-md-4 col-lg-6">
-                        <h3 class="tabs__title">An ultimate eye-catching advertising format to draw viewers’ attention</h3><span class="tabs__span">Banners are an effective image-based promotional tool to notify users of the product. Accompanied by useful customization features, high-quality placement, and animating possibility, these influential ads leave the little possibility to remain unnoticed.</span><br><a class="tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
+                        <h3 class="tabs__title tabs-content_center-media768">An ultimate eye-catching advertising format to draw viewers’ attention</h3><span class="tabs__span tabs-content_center-media768">Banners are an effective image-based promotional tool to notify users of the product. Accompanied by useful customization features, high-quality placement, and animating possibility, these influential ads leave the little possibility to remain unnoticed.</span><br><a class="tabs-content_center-media768 tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
                       </div>
                     </div>
                   </div>
@@ -261,7 +261,7 @@
                     <div class="row">
                       <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="/img/mobile.png" alt=""></div>
                       <div class="col-12 col-md-4 col-lg-6">
-                        <h3 class="tabs__title">The up-to-day shortest way to reach your target audience</h3><span class="tabs__span">Due to the growth of mobile Internet users, mobile ad types became one of the most productive means for goods promotion. This flexible and easily managed ad format helps to access a larger number of viewers and increase the engagement rate.</span><br><a class="tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
+                        <h3 class="tabs__title tabs-content_center-media768">The up-to-day shortest way to reach your target audience</h3><span class="tabs__span tabs-content_center-media768">Due to the growth of mobile Internet users, mobile ad types became one of the most productive means for goods promotion. This flexible and easily managed ad format helps to access a larger number of viewers and increase the engagement rate.</span><br><a class="tabs-content_center-media768 tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
                       </div>
                     </div>
                   </div>
@@ -281,32 +281,32 @@
                     </div>
                   </div>
                   <div class="row padding_bottom">
-                    <div class="col-3 col-md-3 col-lg-2"><img src="img/icon-left-001.svg" alt=""></div>
-                    <div class="col-9 col-md-9 col-lg-10">
+                    <div class="col-3 col-sm-2 col-md-3 col-lg-2"><img src="img/icon-left-001.svg" alt=""></div>
+                    <div class="col-9 col-sm-10 col-md-9 col-lg-10">
                       <h4 class="sixth-box__h4">5 minutes to setup a campaign </h4><span class="sixth-box__span">Quick and easy ads customization</span>
                     </div>
                   </div>
                   <div class="row padding_bottom">
-                    <div class="col-3 col-md-3 col-lg-2"><img src="img/icon-left-002.svg" alt=""></div>
-                    <div class="col-9 col-md-9 col-lg-10">
+                    <div class="col-3 col-sm-2 col-md-3 col-lg-2"><img src="img/icon-left-002.svg" alt=""></div>
+                    <div class="col-9 col-sm-10 col-md-9 col-lg-10">
                       <h4 class="sixth-box__h4">Manual sites selection  </h4><span class="sixth-box__span">Choosing solely relevant ad platforms</span>
                     </div>
                   </div>
                   <div class="row padding_bottom">
-                    <div class="col-3 col-md-3 col-lg-2"><img src="img/icon-left-003.svg" alt=""></div>
-                    <div class="col-9 col-md-9 col-lg-10">
+                    <div class="col-3 col-sm-2 col-md-3 col-lg-2"><img src="img/icon-left-003.svg" alt=""></div>
+                    <div class="col-9 col-sm-10 col-md-9 col-lg-10">
                       <h4 class="sixth-box__h4">Real-time statistic  </h4><span class="sixth-box__span">Only up-to-date ad campaign data</span>
                     </div>
                   </div>
                   <div class="row padding_bottom">
-                    <div class="col-3 col-md-3 col-lg-2"><img src="img/icon-left-004.svg" alt=""></div>
-                    <div class="col-9 col-md-9 col-lg-10">
+                    <div class="col-3 col-sm-2 col-md-3 col-lg-2"><img src="img/icon-left-004.svg" alt=""></div>
+                    <div class="col-9 col-sm-10 col-md-9 col-lg-10">
                       <h4 class="sixth-box__h4">100% real users </h4><span class="sixth-box__span">Protection from any bot or suspicious activity</span>
                     </div>
                   </div>
                   <div class="row padding_bottom">
-                    <div class="col-3 col-md-3 col-lg-2"><img src="img/icon-left-005.svg" alt=""></div>
-                    <div class="col-9 col-md-9 col-lg-10">
+                    <div class="col-3 col-sm-2 col-md-3 col-lg-2"><img src="img/icon-left-005.svg" alt=""></div>
+                    <div class="col-9 col-sm-10 col-md-9 col-lg-10">
                       <h4 class="sixth-box__h4">Helpful support team </h4><span class="sixth-box__span">Timely assistance from qualified consultants</span>
                     </div>
                   </div>
@@ -320,32 +320,32 @@
                     </div>
                   </div>
                   <div class="row padding_bottom">
-                    <div class="col-3 col-md-3 col-lg-2"><img src="img/icon-right-001.svg" alt=""></div>
-                    <div class="col-9 col-md-9 col-lg-10">
+                    <div class="col-3 col-sm-2 col-md-3 col-lg-2"><img src="img/icon-right-001.svg" alt=""></div>
+                    <div class="col-9 col-sm-10 col-md-9 col-lg-10">
                       <h4 class="sixth-box__h4">Easy to operate </h4><span class="sixth-box__span">Just paste the ad code to the site</span>
                     </div>
                   </div>
                   <div class="row padding_bottom">
-                    <div class="col-3 col-md-3 col-lg-2"><img src="img/icon-right-002.svg" alt=""></div>
-                    <div class="col-9 col-md-9 col-lg-10">
+                    <div class="col-3 col-sm-2 col-md-3 col-lg-2"><img src="img/icon-right-002.svg" alt=""></div>
+                    <div class="col-9 col-sm-10 col-md-9 col-lg-10">
                       <h4 class="sixth-box__h4">Clear statistics  </h4><span class="sixth-box__span">Detailed views and clicks reports</span>
                     </div>
                   </div>
                   <div class="row padding_bottom">
-                    <div class="col-3 col-md-3 col-lg-2"><img src="img/icon-right-003.svg" alt=""></div>
-                    <div class="col-9 col-md-9 col-lg-10">
+                    <div class="col-3 col-sm-2 col-md-3 col-lg-2"><img src="img/icon-right-003.svg" alt=""></div>
+                    <div class="col-9 col-sm-10 col-sm-2 col-md-9 col-lg-10">
                       <h4 class="sixth-box__h4">Full safety  </h4><span class="sixth-box__span">Checked and approved advert messages </span>
                     </div>
                   </div>
                   <div class="row padding_bottom">
-                    <div class="col-3 col-md-3 col-lg-2"><img src="img/icon-right-004.svg" alt=""></div>
-                    <div class="col-9 col-md-9 col-lg-10">
+                    <div class="col-3 col-sm-2 col-md-3 col-lg-2"><img src="img/icon-right-004.svg" alt=""></div>
+                    <div class="col-9 col-sm-10 col-md-9 col-lg-10">
                       <h4 class="sixth-box__h4">Quick payments </h4><span class="sixth-box__span">Fast and safe generation of income</span>
                     </div>
                   </div>
                   <div class="row padding_bottom">
-                    <div class="col-3 col-md-3 col-lg-2"><img src="img/icon-right-005.svg" alt=""></div>
-                    <div class="col-9 col-md-9 col-lg-10">
+                    <div class="col-3 col-sm-2 col-md-3 col-lg-2"><img src="img/icon-right-005.svg" alt=""></div>
+                    <div class="col-9 col-sm-10 col-md-9 col-lg-10">
                       <h4 class="sixth-box__h4">Various ad settings </h4><span class="sixth-box__span">Easy ads adaption to the site design</span>
                     </div>
                   </div>
