--- a/app/index.html
+++ b/app/index.html
@@ -27,25 +27,29 @@
               <div class="col-12 col-sm-6 col-lg-3 order-first justify-content-center">
                 <div class="container firstBlockHeader">
                   <div class="row"> 
-                    <div class="col-3 col-sm-3 col-md-4 col-lg-2 col-xl-2 btn-menu">
-                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
+                    <div class="col-2 btn-menu"><a class="menuBar navbar-toggler" href="#" id="menuBar" data-toggle="collapse" data-target="#navbarResponsive">
+<span class="menuBar__item menuBar__item-1"></span>
+<span class="menuBar__item menuBar__item-2"></span>
+<span class="menuBar__item menuBar__item-3"></span>
+</a>
                     </div>
-                    <div class="col-9 col-sm-9 col-md-8 col-lg-10 col-xl-10 logo"><a class="navbar-brand" href="#"><img src="./img/icwt-logo.svg" alt=""></a></div>
+                    <div class="col-10 logo"><a class="navbar-brand" href="#"><img src="./img/icwt-logo.svg" alt=""></a></div>
                   </div>
                 </div>
               </div>
               <div class="col-lg-6 justify-content-center navbar_position">
-                <div class="collapse navbar-collapse header-navbar justify-content-center" id="navbarResponsive">
+                <div class="collapse navbar-collapse header-navbar justify-content-center navbar_position-collapse" id="navbarResponsive">
                   <ul class="navbar-nav header-navbar-ul">
                     <li class="nav-item"><a class="nav-link header-navbar-ul__li_a-text-style" href="#Advertisers">Advertisers</a></li>
                     <li class="nav-item"><a class="nav-link header-navbar-ul__li_a-text-style" href="#Platforms">Platforms</a></li>
                     <li class="nav-item"><a class="nav-link header-navbar-ul__li_a-text-style" href="#Formats">Formats</a></li>
                     <li class="nav-item"><a class="nav-link header-navbar-ul__li_a-text-style" href="#About">About</a></li>
                     <li class="nav-item"><a class="nav-link header-navbar-ul__li_a-text-style" href="#Guide">Guide</a></li>
+                    <li class="nav-item button_display-menu"><a class="header-btn__login button__login_hover-and-active d-flex align-items-center justify-content-center" href="#"> Login</a><a class="header-btn__sign button_hover-and-active d-flex btn_font-color_white align-items-center justify-content-center" href="#"> Sign Up</a></li>
                   </ul>
                 </div>
               </div>
-              <div class="col-12 col-sm-6 col-lg-3 header__btns d-flex justify-content-end"><a class="header-btn__login button__login_hover-and-active d-flex align-items-center justify-content-center" href="#"> Login</a><a class="header-btn__sign button_hover-and-active d-flex btn_font-color_white align-items-center justify-content-center" href="#"> Sign Up</a></div>
+              <div class="col-12 col-sm-6 col-lg-3 header__btns d-flex justify-content-end"><a class="button_display header-btn__login button__login_hover-and-active d-flex align-items-center justify-content-center" href="#"> Login</a><a class="button_display header-btn__sign button_hover-and-active d-flex btn_font-color_white align-items-center justify-content-center" href="#"> Sign Up</a></div>
             </div>
           </div>
         </nav>
