--- a/app/index.html
+++ b/app/index.html
@@ -263,7 +263,7 @@
                   </div>
                   <div class="tab-pane fade" id="mobile" role="tabpanel" aria-labelledby="mobile-tab">
                     <div class="row">
-                      <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="/img/mobile.png" alt=""></div>
+                      <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="img/mobile.png" alt=""></div>
                       <div class="col-12 col-md-4 col-lg-6">
                         <h3 class="tabs__title tabs-content_center-media768">The up-to-day shortest way to reach your target audience</h3><span class="tabs__span tabs-content_center-media768">Due to the growth of mobile Internet users, mobile ad types became one of the most productive means for goods promotion. This flexible and easily managed ad format helps to access a larger number of viewers and increase the engagement rate.</span><br><a class="tabs-content_center-media768 tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
                       </div>
